[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Tilesets/WhiteTile.png" type="Texture" id=1]
[ext_resource path="res://Entities/Characters/Player/Egg.png" type="Texture" id=2]
[ext_resource path="res://Entities/Characters/Player/Chick.png" type="Texture" id=3]
[ext_resource path="res://Entities/Environment/TriggerableGround.gd" type="Script" id=4]
[ext_resource path="res://Resources/Fonts/eras-bold-itc/ERASBD.TTF" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 32, 32 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 5 )

[node name="TriggerableGround" type="StaticBody2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
time_duration = 5.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -32.0
margin_top = -224.0
margin_right = 32.0
margin_bottom = -128.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.145098, 0.305882, 0.439216, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
